# vault-memory

./: .gitignore  README.md  __init__.py  install-hermes.sh  plugin.yaml  pyproject.toml  vault_watcher.py  vm
hermes_plugin/: __init__.py
vault_memory/: __init__.py  chunker.py  cli.py  embedder.py  indexer.py  store.py
