[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vault-memory"
version = "0.1.0"
description = "Semantic search over collections of markdown files — BM25 + vector hybrid, SQLite, Gemini embeddings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []  # stdlib only — no external deps

[project.scripts]
vm = "vault_memory.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vault_memory*"]
